@@ -1,3 +1,4 @@
+2017-10-23 Added keyboard navigation in Table of Contents module
 2017-10-16 Added sending events on select and deselect and corresponding property.
 2017-10-16 Load button for list property in editor showed only for iframe module.
 2017-10-12 Fixed test configuration in Quiz module
